Implemented Ratings API and tests