@@ -1,7 +1,5 @@
 package com.att.tdp.bisbis10.logic.restaurants;
 
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Component;
 
 import com.att.tdp.bisbis10.data.RestaurantEntity;
@@ -20,6 +18,6 @@ public class RestaurantConverter {
 	public RestaurantBoundary toBoundary(RestaurantEntity entity) {
 		return new RestaurantBoundary(entity.getId(), entity.getName(), entity.getAverageRating(), entity.isKosher(),
 				entity.getCuisines().stream().sorted((c1, c2) -> Long.compare(c1.getId(), c2.getId()))
-						.map(cuisineEntity -> cuisineEntity.getName()).collect(Collectors.toList()));
+						.map(cuisineEntity -> cuisineEntity.getName()).toList());
 	}
 }
